--- a/www/css/style.css
+++ b/www/css/style.css
@@ -40,3 +40,19 @@
     vertical-align:bottom;
     */
 }
+
+.my-icon {
+  background-color: #000;
+}
+
+.active > .tab-bar-inner > .my-icon {
+  background-color: #eff;
+}
+
+.relative {
+    position: relative;
+}
+.absolute {
+    position: absolute;
+    left: 21px;
+    top: 1px;}
