--- a/www/css/style.css
+++ b/www/css/style.css
@@ -58,3 +58,12 @@
     top: 1px;
     width: 17px;
     }
+    
+
+.absolute_cat {
+    position: absolute;
+    left: 1px;
+    top: 1px;
+    width: 17px;
+    }
+    
